--- a/MediaPlayer/src/com/kc/view/mediaControl.fxml
+++ b/MediaPlayer/src/com/kc/view/mediaControl.fxml
@@ -13,17 +13,8 @@
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
-            <MenuItem mnemonicParsing="false" text="Close" />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Edit">
-          <items>
-            <MenuItem mnemonicParsing="false" text="Delete" />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Help">
-          <items>
-            <MenuItem mnemonicParsing="false" text="About" />
+            <MenuItem mnemonicParsing="false" onAction="#openFile" text="Open" />
+            <MenuItem mnemonicParsing="false" onAction="#exitPlayer" text="Close" />
           </items>
         </Menu>
       </menus>
