--- a/MediaPlayer/src/com/kc/view/mediaControl.fxml
+++ b/MediaPlayer/src/com/kc/view/mediaControl.fxml
@@ -9,7 +9,7 @@
 <BorderPane prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="com.kc.controller.MediaController">
   <!-- TODO Add Nodes -->
   <top>
-    <MenuBar prefHeight="25.0">
+    <MenuBar fx:id="menuBar" prefHeight="25.0">
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
