--- a/MediaPlayer/src/com/kc/style/MediaPlayer.css
+++ b/MediaPlayer/src/com/kc/style/MediaPlayer.css
@@ -1,24 +1,20 @@
 .slider .thumb {
-    -fx-background-color:
-        derive(-fx-color,-36%),
-        derive(-fx-color,73%),
-        linear-gradient(to bottom, derive(-fx-color,-19%),derive(-fx-color,61%));
-    -fx-background-insets: 0, 1, 2;
-    -fx-background-radius: 0 1.0em 1.0em 0; /* makes sure this remains semi-circular */
-    -fx-padding: 0.583333em; /* 7 */
-    -fx-background-image: url("handle-sm.png");
+    -fx-background-color: transparent;
+    -fx-background-image: url("slider.png");
 
 }
-
+.slider .thumb:hover {
+    -fx-background-image: url("slider-hover.png");
+}
 .slider:focused .thumb {
-    -fx-color: -fx-focused-base;
+   /* -fx-color: -fx-focused-base;
     -fx-background-color:
         -fx-focus-color,
         derive(-fx-color,-36%),
         derive(-fx-color,73%),
         linear-gradient(to bottom, derive(-fx-color,-19%),derive(-fx-color,61%));
     -fx-background-insets: -1.4, 0, 1, 2;
-    -fx-background-radius: 0 1.0em 1.0em 0; /* makes sure this remains semi-circular */
+    -fx-background-radius: 0 1.0em 1.0em 0;  makes sure this remains semi-circular */
 
 }
 
@@ -57,5 +53,78 @@
 .slider .axis .tick-mark {
     -fx-font-size: 0.833333em;
 }
+.button, .toggle-button{
+	 -fx-background-color: transparent; 
+	 -fx-background-radius: 0,0,0;
+	 
+	 }
+	 
+#play {
+	
+	-fx-graphic: url("play-icon.png");
+	-fx-background-repeat: no-repeat;
+ 	 -fx-background-position: center;
+ 	 -fx-padding: 3px;
+}
+#play:hover {
+	
+	-fx-graphic: url("play-hover-icon.png");
+	-fx-background-repeat: no-repeat;
+ 	 -fx-background-position: center;
+ 	 -fx-padding: 3px;
+}
+#stop {
+	
+	-fx-graphic: url("stop-icon.png");
+	-fx-background-repeat: no-repeat;
+ 	 -fx-background-position: center;
+ 	 -fx-padding: 3px;
+}
 
+#stop:hover {
+	
+	-fx-graphic: url("stop-hover-icon.png");
+	-fx-background-repeat: no-repeat;
+ 	 -fx-background-position: center;
+ 	 -fx-padding: 3px;
+}
+#playlist {
+	
+	-fx-graphic: url("playlist-icon.png");
+	-fx-background-repeat: no-repeat;
+ 	 -fx-background-position: center;
+ 	 -fx-padding: 3px;
+}
 
+#playlist:hover {
+	
+	-fx-graphic: url("playlist-hover-icon.png");
+	-fx-background-repeat: no-repeat;
+ 	 -fx-background-position: center;
+ 	 -fx-padding: 3px;
+}
+#volume
+{
+	
+	-fx-graphic: url("volume-icon.png");
+	-fx-background-repeat: no-repeat;
+ 	 -fx-background-position: center;
+ 	 -fx-padding: 3px;
+}
+
+#volume:hover
+{
+	
+	-fx-graphic: url("volume-hover-icon.png");
+	-fx-background-repeat: no-repeat;
+ 	 -fx-background-position: center;
+ 	 -fx-padding: 3px;
+}
+#volume:selected
+{
+	
+	-fx-graphic: url("volume-mute-icon.png");
+	-fx-background-repeat: no-repeat;
+ 	 -fx-background-position: center;
+ 	 -fx-padding: 3px;
+}
