--- a/src/main/resources/com/ita/fxml/mediaplayer.fxml
+++ b/src/main/resources/com/ita/fxml/mediaplayer.fxml
@@ -11,7 +11,7 @@
 <?import com.ita.ui.SliderBar?>
 <?scenebuilder-classpath-element ../../../../../../../target/classes?>
 
-<BorderPane prefHeight="-1.0" prefWidth="-1.0" stylesheets="@../style/MediaPlayer.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ita.controller.MediaPlayerController">
+<BorderPane fx:id="root" prefHeight="-1.0" prefWidth="-1.0" stylesheets="@../style/MediaPlayer.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ita.controller.MediaPlayerController">
   <top>
     <MenuBar fx:id="menuBar" prefHeight="25.0">
       <menus>
@@ -33,7 +33,7 @@
       <MediaView fx:id="mediaView" fitHeight="300.0" fitWidth="600.0" BorderPane.alignment="CENTER" />
    </center>
    <bottom>
-      <HBox id="control-bar" prefHeight="50.0" prefWidth="500.0" spacing="5.0" style="-fx-background-color: #3E3E3E;" BorderPane.alignment="CENTER_LEFT">
+      <HBox id="control-bar" fx:id="mediaControl" prefHeight="50.0" prefWidth="500.0" spacing="5.0" style="-fx-background-color: #3E3E3E;" BorderPane.alignment="CENTER_LEFT">
          <padding>
             <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
          </padding>
